# gitlab-wh

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/actions/project/: .dockerignore  Dockerfile  action.yml  pyproject.toml
.github/actions/project/app/: main.py
.github/workflows/: docs.yml  project.yml  pull_request.yml
docs/: index.md  mkdocs.yml
docs/docs/en/: index.md
docs/docs/ru/: index.md
search/: search_index.json
src/: main.py
src/app/: __init__.py  base.py  exception_handlers.py  exceptions.py  middleware.py  templates.py
src/config/: __init__.py
src/dependencies/: auth.py  templates.py
src/models/pages/: alert.py
src/repository/http_requests/: base.py  fake_http.py  gitlab.py
src/routers/: __init__.py  tools.py
src/routers/api/: __init__.py  service.py
src/routers/pages/: __init__.py  index.py  service.py  users.py
src/static/css/: color-modes.css
src/templates/: base.html.j2  base_authorized.html.j2
src/templates/elements/: alert.html.j2  color_modes.html.j2  logo.html.j2
src/templates/helpers/: highlightjs.html.j2
src/templates/pages/common/: error.html.j2  index.html.j2  sign_in.html.j2
src/templates/pages/errors/: 404.html.j2  422.html.j2  4xx.html.j2  500.html.j2  base_error.html.j2
src/templates/pages/users/: sign_in.html.j2
src/types/: __init__.py  group.py  pages.py  personal_access_token.py  project.py  user.py
src/types/access_token/: access_token.py  personal.py  project_group.py
tests/: integration_tests.sh
tests/repository/: mocks.py
tests/repository/http_requests/: conftest.py  test_fake_http.py  test_gitlab.py
tests/routers/: conftest.py  tools_test.py
tests/routers/api/: test_service.py
