[tool.poetry]
name = "gitlab-wh"
version = "0.0.1"
description = "This is a web service for GitLab Free owners that will help you expand functionality to the Premium/Ultimate version, as well as further automate some development processes."
authors = [
    "Kochetov Dmitriy <dimankochetov@yandex.ru>",
    "Nikita Paramonov <nikita@nparamonov.ru>"
]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "src"}]
repository = "https://github.com/KsQRooW/gitlab-wh"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.105.0"
starlette = ">=0.27.0,<0.28.0"
pydantic = "^2.5"
granian = "^0.7"
uvloop = {version = "0.18.0", markers = "sys_platform == 'linux'"}
jinja2 = "^3.1.2"
aiohttp = "^3.9.1"
python-multipart = "^0.0.6"

[tool.poetry.group.tests.dependencies]
mypy = "1.7.1"
ruff = "0.1.7"
deptry = "0.12.0"
pytest = "^7.4"
coverage = "^7.3"
httpx = "^0.25.2"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5"
mkdocs-static-i18n = {extras = ["material"], version = "^1.2.0"}

[tool.mypy]
strict = true

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # flake8-annotations
    "D100", # undocumented-public-module
    "D104", # undocumented-public-package
    "D415", # ends-in-punctuation
    "TD", # flake8-todos
    "FIX", # flake8-fixme
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # assert

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.pydocstyle]
convention = "google"

[tool.coverage.run]
data_file = ".coverage/coverage"

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:"
]
show_missing = true

[tool.coverage.html]
directory = ".coverage/htmlcov"

[tool.coverage.xml]
output = ".coverage/coverage.xml"

[tool.coverage.json]
output = ".coverage/coverage.json"

[tool.deptry.per_rule_ignores]
DEP002 = ["granian", "uvloop", "jinja2", "python-multipart"]
